--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,2 +1,15 @@
 
-<h1> {{ message }} </h1>
+
+{% extends 'base.html' %} {% block content %}
+
+
+<title> {{ title }} </title>
+
+<div class="container">
+    <br>
+    <br>
+    <br>
+    <h1>HOME PAGE</h1>
+</div>
+
+{% endblock %}
