--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -19,7 +19,7 @@
       </li>
       {% else %}
       <li class="nav-item">
-        <a class="nav-link" href="{{url_for('main.profile_category')}}">My Account</a>
+        <a class="nav-link" href="{{url_for('main.profile',uname=current_user.username)}}">My Account</a>
       </li>
 
       <li class="nav-item">
