--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 {% extends 'bootstrap/base.html'%}
 
 {% block styles %}
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/solar/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/sketchy/bootstrap.min.css">
 {% endblock %}
 
 {% include 'navbar.html' %}
