--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,17 +1,45 @@
-{% extends 'base.html'%}
-
+{% extends 'base.html'%} 
 {% block content %}
-<div class="container">
-<div class="row">
-<!-- displaying  Username-->
-  <div class="col-md-12">
-    <h3> {{user.username| capitalize}} </h3>
+<div style="background-color:#deeef9; padding-top: 130px; padding-bottom: 400px;" class="container-fluid">
+  <div class="container">
+    <div class="row">
+      <!-- displaying  Username-->
+      <div class="col-md-4">
 
-    <!--Displaying user bio-->
-    {% if user.bio %}
-      <p> {{user.bio}}</p>
-    {%else%}
-      <p> {{user.username| capitalize}} has no bio </p>
-    {% endif %}
+        {% if user == current_user %}
+        <h3> {{user.username| capitalize}} </h3>
+        {% endif %}
+        <!--Displaying user bio-->
+        {% if user.bio %}
+        <p> {{user.bio}}</p>
+        {% else%}
+        <p> {{user.username| capitalize}} has no bio </p>
+        {% if user == current_user %}
+        <a href="{{url_for('main.update_profile',uname=user.username)}}"><button class="btn btn-outline-info btn-sm">Edit
+            profile
+          </button></a>
+        {% endif %} 
+        {% endif %}
+      </div>
+      
+      <!--Display profile photo-->
+      <div class="col-md-4">
+        {% if user.profile_pic_path %}
+        <img style="border-radius: 10%; " src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-circle img-thumbnail">      
+        {else%}
+        <p>No profile picture</p>
+        {% endif %} 
+
+        {% if user == current_user %}
+        <form action="{{url_for('main.update_pic',uname=user.username)}}" method="post" enctype="multipart/form-data">
+          <input type="file" name="photo" class="form-control" required>
+          <input type="submit">
+        </form>
+        {% endif %}
+      </div>
+    </div>
   </div>
+</div>
 {% endblock %}
+
+
